mq/basic/qm-template.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: $ROUTE_NAME
  namespace: $TARGET_NAMESPACE
spec:
  host: $SVRCONN_SNI
  to:
    kind: Service
    name: $QM_POD_NAME-ibm-mq
  port:
    targetPort: 1414
  tls:
    termination: passthrough
